--- a/P009289.opf/layers/v001/Pagination.yml
+++ b/P009289.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 7268009cb8184afbb1c79f2dbbd3fb19
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   79656b9876ca44f1bd745e17f344b3aa:
