--- a/P009289.opf/meta.yml
+++ b/P009289.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P009289
 initial_creation_type: ocr
 created_at: 25/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-19 19:31:46.375730
 source_metadata:
   id: bdr:W27933
   title: བཀའ་ཐང་གསེར་ཕྲེང
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 798
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
